Fix wrapping in UI error messages

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -216,6 +216,11 @@ ol {
   }
 }
 
+/* Fix wrapping in UI error messages */
+.main-content > .alert-message.fade-in > div > pre {
+  white-space: pre-wrap;
+}
+
 /* Login page customization */
 [data-path="login"] {
   .main-content {
